--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,117 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Footer</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+{% include base_path %}
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
-      integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <footer class="small bg-light">
-      <div class="container py-3 py-sm-5">
-        <div class="row">
-          <div class="col-12 col-sm-6 col-md-3">
-            <h6>Quick links</h6>
-            <ul class="list-unstyled">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">What's new</a></li>
-              <li><a href="#">Featured Product</a></li>
-              <li><a href="#">News letter</a></li>
-              <li><a href="#">My account</a></li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <h6>Information</h6>
-            <ul class="list-unstyled">
-              <li><a href="#">About us</a></li>
-              <li><a href="#">Membership</a></li>
-              <li><a href="#">Shipping &amp; returns</a></li>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Sitemap</a></li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <h6>Follow us</h6>
-            <ul class="list-unstyled">
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">LinkedIn</a></li>
-              <li><a href="#">YouTube</a></li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <address>
-              <strong>BIET Jhansi</strong><br />
-              Panchwati Hostel<br />
-              Jhansi, Uttar Pradesh<br />
-              <abbr title="Telephone">T:</abbr
-              ><a href="tel:+919876543210">(987) 654-3210</a><br />
-              <abbr title="Mail">M:</abbr
-              ><a href="mailto:info@domain.com">info@domain.com</a>
-            </address>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-12 col-sm-6 col-md-9">
-            <ul class="list-inline">
-              <li class="list-inline-item">&copy; 2017 Web Company, Inc.</li>
-              <li class="list-inline-item">All rights reserved.</li>
-              <li class="list-inline-item">
-                <a href="#">Terms of use and privacy policy</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="dropdown dropup p-0">
-              <button
-                type="button"
-                class="btn btn-secondary btn-sm dropdown-toggle"
-                id="dropdownMenuButton"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Visit other sites:
-              </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a href="#" class="dropdown-item">www.otherwebsite.com</a>
-                <a href="#" class="dropdown-item">www.newwebsite.com</a>
-                <a href="#" class="dropdown-item">www.oldwebsite.com</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
+<div class="page__footer-follow">
+  <ul class="social-icons">
+    {% if site.data.ui-text[site.locale].follow_label %}
+      <li><strong>{{ site.data.ui-text[site.locale].follow_label }}</strong></li>
+    {% endif %}
+    {% if site.twitter.username %}
+      <li><a href="https://twitter.com/{{ site.twitter.username }}"><i class="fab fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+    {% endif %}
+    {% if site.facebook.username %}
+      <li><a href="https://facebook.com/{{ site.facebook.username }}"><i class="fab fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
+    {% endif %}
+    {% if site.author.github %}
+      <li><a href="http://github.com/{{ site.author.github }}"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a></li>
+    {% endif %}
+    {% if site.author.bitbucket %}
+      <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
+    {% endif %}
+    <li><a href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}"><i class="fa fa-fw fa-rss-square" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].feed_label | default: "Feed" }}</a></li>
+  </ul>
+</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"
-      integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"
-      integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+<div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
