--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -12,8 +12,8 @@
   {% assign title = post.title %}
 {% endif %}
 
-<div class="{{ include.type | default: "list" }}__item">
-    <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
+<div class="{{ include.type | default: "list" }}__item" data-aos="fade-up">
+    <article class="archive__item glass-card" itemscope itemtype="http://schema.org/CreativeWork">
         {% if include.type == "grid" and teaser %}
         <div class="archive__item-teaser">
             <img src={% if teaser contains "://" %}
@@ -38,49 +38,35 @@
         {% endif %}
 
         {% if post.collection == 'teaching' %}
-        <p> {{ post.type }}, <i>{{ post.venue }}</i>, {{post.semester}} </p>
+        <p class="archive__item-meta"> {{ post.type }}, <i>{{ post.venue }}</i>, {{post.semester}} </p>
         {% elsif post.collection == 'publications' %}
-        <p>Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
+        <p class="archive__item-meta">Published in <i>{{ post.venue }}</i>, {{ post.date | default: "1900-01-01" | date: "%Y" }} </p>
         {% elsif post.date %}
-        <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
+        <p class="page__date archive__item-meta"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Published:" }}</strong> <time datetime="{{ post.date | default: "1900-01-01" | date_to_xmlschema }}">{{ post.date | default: "1900-01-01" | date: "%B %d, %Y" }}</time></p>
         {% endif %}
 
-        {% comment %}
-        {% if post.citation and post.paperurl %}
-        <p>Recommended citation: {{ post.citation }} <a href="{{ post.paperurl }}"><u>{{ post.paperurl }}</u></a></p>
-        {% elsif post.citation %}
-        <p>Recommended citation: {{ post.citation }} </p>
-        {% elsif post.paperurl %}
-        <p>Download <a href=" {{ post.paperurl }} "><u>here</u></a></p>
+        {% if post.citation %}
+        <p class="archive__item-citation">{{ post.citation }}</p>
         {% endif %}
-        {% endcomment %}
-
-        <p>
-            {% if post.citation %}
-            {{ post.citation }}
-            {% endif %}
-            <br>
+        
+        <div class="archive__item-links">
             {% if post.link %}
-            <a href="{{ post.link }}"><i class="fas fa-fw fa-link zoom" aria-hidden="true"></i></a>
+            <a href="{{ post.link }}" class="archive-link" title="Link"><i class="fas fa-fw fa-link"></i></a>
             {% endif %}
             {% if post.paperurl %}
-            <a href="{{ post.paperurl }}"><i class="fas fa-fw fa-file-pdf zoom" aria-hidden="true"></i></a>
+            <a href="{{ post.paperurl }}" class="archive-link" title="PDF"><i class="fas fa-fw fa-file-pdf"></i></a>
             {% endif %}
             {% if post.code %}
-            <a href="{{ post.code }}"><i class="fas fa-fw fa-code zoom" aria-hidden="true"></i></a>
+            <a href="{{ post.code }}" class="archive-link" title="Code"><i class="fas fa-fw fa-code"></i></a>
             {% endif %}
             {% if post.github %}
-            <a href="{{ post.github }}"><i class="fab fa-fw fa-github zoom" aria-hidden="true"></i></a>
+            <a href="{{ post.github }}" class="archive-link" title="GitHub"><i class="fab fa-fw fa-github"></i></a>
             {% endif %}
-        </p>
+        </div>
 
-        {% comment %}
-        {% if post.excerpt and site.read_more != 'enabled' %}
-        <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify }}</p>
-        {% elsif post.excerpt and site.read_more == 'enabled' %}
-        <p class="archive__item-excerpt" itemprop="description"><p>{{ post.excerpt | markdownify | remove: '<p>' | remove: '</p>' }}<strong><a href="{{ base_path }}{{ post.url }}" rel="permalink"> Read more</a></strong></p></p>
+        {% if post.excerpt %}
+        <p class="archive__item-excerpt" itemprop="description">{{ post.excerpt | markdownify | strip_html | truncate: 160 }}</p>
         {% endif %}
-        {% endcomment %}
 
     </article>
 </div>
