--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   FOOTER
+   FOOTER - Futuristic Dark Theme
    ========================================================================== */
 
 .page__footer {
@@ -10,26 +10,24 @@
   width: 100%;
   clear: both;
   /* sticky footer fix start */
-  position: absolute;
+  position: relative;
   bottom: 0em;
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  color: mix(#fff, $gray, 25%);
+  color: $text-color;
   -webkit-animation: intro 0.3s both;
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: $lighter-gray;
-  border-top: 1px solid $light-gray;
+  background: linear-gradient(180deg, $dark-bg-secondary 0%, $dark-bg-primary 100%);
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
 
   footer {
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
     max-width: 100%;
-    padding: 0 1em 2em;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
@@ -49,7 +47,7 @@
   .fab,
   .far,
   .fal {
-    color: mix(#fff, $gray, 25%);
+    color: $text-color;
   }
 }
 
