--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -1,5 +1,5 @@
 /* ==========================================================================
-   TABLES
+   TABLES - Futuristic Theme
    ========================================================================== */
 
 table {
@@ -8,7 +8,10 @@ table {
   font-family: $global-font-family;
   font-size: $type-size-6;
   border-collapse: collapse;
-  border: 1px solid $light-gray;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(26, 26, 46, 0.4);
+  border-radius: 8px;
+  overflow: hidden;
 
   & + table {
     margin-top: 1em;
@@ -16,21 +19,31 @@ table {
 }
 
 thead {
-  background-color: $lighter-gray;
-  border-bottom: 1px solid $light-gray;
+  background: rgba(0, 245, 255, 0.1);
+  border-bottom: 1px solid rgba(0, 245, 255, 0.3);
 }
 
 th {
-  padding: 0.5em;
+  padding: 0.75em 1em;
   font-weight: bold;
   text-align: left;
-  border-right: 1px solid $light-gray;
+  border-right: 1px solid rgba(255, 255, 255, 0.1);
+  color: #00f5ff;
 }
 
 td {
-  padding: 0.5em;
-  border-bottom: 1px solid $light-gray;
-  border-right: 1px solid $light-gray;
+  padding: 0.75em 1em;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+  border-right: 1px solid rgba(255, 255, 255, 0.05);
+  color: #cbd5e1;
+}
+
+tr {
+  transition: background 0.3s ease;
+  
+  &:hover {
+    background: rgba(0, 245, 255, 0.05);
+  }
 }
 
 tr, td, th {
